--- a/NESM Server/nbproject/project.properties
+++ b/NESM Server/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.jar=${dist.dir}/NESM.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-5.0.8-bin.jar=E:\\ITI\\Java\\mysql-connector-java-5.0.8\\mysql-connector-java-5.0.8-bin.jar
+file.reference.mysql-connector-java-5.0.8-bin.jar=src/mysql-connector-java-5.0.8/mysql-connector-java-5.0.8-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
