--- a/NESM Server/nbproject/project.properties
+++ b/NESM Server/nbproject/project.properties
@@ -37,6 +37,8 @@ file.reference.jfreechart-1.0.13-swt.jar=C:\\Users\\atef\\Desktop\\Demo\\jfreech
 file.reference.jfreechart-1.0.13.jar=C:\\Users\\atef\\Desktop\\Demo\\jfreechart-1.0.13.jar
 file.reference.junit.jar=C:\\Users\\atef\\Desktop\\Demo\\junit.jar
 file.reference.mysql-connector-java-5.0.8-bin.jar=src/mysql-connector-java-5.0.8/mysql-connector-java-5.0.8-bin.jar
+file.reference.rmiio-2.1.0-sources.jar=src/rmiio/rmiio-2.1.0-sources.jar
+file.reference.rmiio-2.1.0.jar=src/rmiio/rmiio-2.1.0.jar
 file.reference.servlet.jar=C:\\Users\\atef\\Desktop\\Demo\\servlet.jar
 file.reference.swtgraphics2d.jar=C:\\Users\\atef\\Desktop\\Demo\\swtgraphics2d.jar
 includes=**
@@ -51,7 +53,9 @@ javac.classpath=\
     ${file.reference.jfreechart-1.0.13-swt.jar}:\
     ${file.reference.junit.jar}:\
     ${file.reference.servlet.jar}:\
-    ${file.reference.swtgraphics2d.jar}
+    ${file.reference.swtgraphics2d.jar}:\
+    ${file.reference.rmiio-2.1.0.jar}:\
+    ${file.reference.rmiio-2.1.0-sources.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
